--- a/ebbbbbbbbbbbbbbbb.vcxproj
+++ b/ebbbbbbbbbbbbbbbb.vcxproj
@@ -107,7 +107,7 @@
       <AdditionalIncludeDirectories>C:\Users\Pudje\source\repos\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Users\Pudje\source\repos\SFML-2.5.1\lib;C:\Users\Pudje\source\repos\ebbbbbbbbbbbbbbbb\SFML\extlibs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-system-d.lib;flac.lib;freetype.lib;ogg.lib;openal32.lib;vorbis.lib;vorbisenc.lib;vorbisfile.lib;winmm.lib;gdi32.lib;ws2_32.lib;legacy_stdio_definitions.lib;%(AdditionalDependencies)</AdditionalDependencies>
